    - ia64 build failure was fixed in last NMU. Closes: #151956
    - This sshd/libc bug is long since gone. Closes: #72596, #82468
    - ldconfig search order has also since been fixed. Closes: #105249
    - Add patches that OpenOffice needs in order to build. Closes: #153107
    - Bump min kernel supported to 2.2.0 for everything except m68k.
      Closes: #149529

 -- Ben Collins <bcollins@debian.org>  Thu, 25 Jul 2002 11:13:22 -0400

glibc (2.2.5-12) unstable; urgency=low

  * Non-maintainer upload to fix build problems on ia64
  * replaces ia64-asm-fixes.dpatch with ia64-perf.dpatch, ia64-strncpy.dpatch

 -- Bdale Garbee <bdale@gag.com>  Tue, 16 Jul 2002 17:09:24 -0600

glibc (2.2.5-11) unstable; urgency=low

  * Yet another NMU
  * Build with a -11 version to work around fragile logic that breaks
    locale dependencies when using NMU versioning. Closes: Bug#152968

 -- Wichert Akkerman <wakkerma@debian.org>  Sun, 14 Jul 2002 23:59:04 +0200

glibc (2.2.5-10.0) unstable; urgency=low

  * Non-maintainer upload by the security team
  * Rebuild, uploads to both testing and unstable are not allowed

 -- Wichert Akkerman <wakkerma@debian.org>  Sun, 14 Jul 2002 04:48:50 +0200

glibc (2.2.5-9) testing-security unstable; urgency=low

  * Something fucked up. Not sure why the .diff.gz size didn't match the
    .changes/.dsc. Not sure why katie didn't reject the upload when it found
    that out aswell.

 -- Ben Collins <bcollins@debian.org>  Sat, 13 Jul 2002 10:08:51 -0400

glibc (2.2.5-8) testing-security unstable; urgency=low

  * Resolver security bug fix.

 -- Ben Collins <bcollins@debian.org>  Fri, 12 Jul 2002 18:24:28 -0400

glibc (2.2.5-7) unstable; urgency=low

  * Misc ia64 asm updates, and strncpy fix
  * Misc sparc patches from DaveM
  * Revert sparc64 back to lib64 from my rebelious lib/64 effort. Use gcc-3.1
    now.

 -- Ben Collins <bcollins@debian.org>  Mon, 17 Jun 2002 22:33:39 -0400

glibc (2.2.5-6) unstable; urgency=low
