@@ -1,6 +1,5 @@
 glibc-cvs
 glibc22-misc
-db1-addon-enabler
 manual-texinfo4
 ldd
 glibcbug
