@@ -201,7 +201,6 @@ $(stamp_unpack): prep.sh
 	$(SHELL) prep.sh
 	$(MAKE) -f debian/rules links
 	$(MAKE) -f debian/rules setperms
-	ln -s . glibc-$(VERSION)/db/db1
 	# Stopgap, since memset.S on ppc is broken...
 	rm -f glibc-$(VERSION)/sysdeps/powerpc/memset.S
 	touch $@
