@@ -13,6 +13,10 @@ glibc (2.2.5-13) unstable; urgency=low
     - Add patches that OpenOffice needs in order to build. Closes: #153107
     - Bump min kernel supported to 2.2.0 for everything except m68k.
       Closes: #149529
+    - Remove db1 compat library. The only user I know of this is coda. Coda
+      can include it's own version of the library now. I've emailed the coda
+      maintainer.
+    - Bump the shlibs ver because of the min-kernel change, and db1 removal.
 
  -- Ben Collins <bcollins@debian.org>  Thu, 25 Jul 2002 11:13:22 -0400
 
